# shiny-pokemon-hunt-bot

./: .gitignore  LICENSE  README.md  config.py  environment.yml  pyproject.toml
shinyHuntBot/: app.py  controls.py  screenshot.py
